--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@react-native-community/hooks": "^2.6.0",
     "expo": "~38.0.8",
     "expo-constants": "^9.1.1",
+    "expo-image-picker": "~8.3.0",
+    "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "formik": "^2.1.5",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-web": "~0.11.7",
     "yup": "^0.29.3"
   },
